--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -2,7 +2,7 @@
 
 ## Objectives
 
-In this Lab you learn how to use AppDynamics to monitor the health of your application services. In this Lab, you learn how to install and configure the Java Application Performance Monitoring (APM) agent to monitor your application's health, how to troubleshoot application performance issues to find root cause, and how to generate alerts in AppDynamic's monitoring service based off of data captured by AppDynamics.
+In this Lab you learn how to use AppDynamics to monitor the health of your application services. In this Lab, you learn how to install and configure the Java Application Performance Monitoring (APM) agent to monitor your application's health, how to troubleshoot application performance issues to find root cause, and how to monitor alerts in AppDynamic's monitoring service based off of data captured by AppDynamics.
 
 ## Prerequisites
 
