--- a/labs/appd-apm-java-101/3.md
+++ b/labs/appd-apm-java-101/3.md
@@ -207,7 +207,7 @@ Update the three properties in the file with the values seen below.  Ensure that
 <tier-name>Web-Portal</tier-name>
 <node-name>Web-Portal_Node-01</node-name>
 ```
-Your file should like the abbreviated example below after you have made the changes and saved the file. 
+Your file should look like the abbreviated example below after you have made the changes and saved the file. 
 
 ![Java Install 5](./assets/images/03-java-install-05.png)
 
@@ -215,7 +215,7 @@ Your file should like the abbreviated example below after you have made the chan
 
 ### **4.** Modify the Apache Tomcat startup script to add the Java agent
 
-Apache Tomcat is installed and running on your "Application VM". Perform the steps below to add the Java agent to the Tomcat startup.
+Apache Tomcat is installed and running on your "Application VM". Perform the steps below to add the Java agent to the Tomcat startup script.
 
 Use the command below to stop the running instance of Apache Tomcat.
 
@@ -236,7 +236,7 @@ export CATALINA_OPTS="$CATALINA_OPTS -javaagent:/opt/appdynamics/javaagent/javaa
 ```
 
 
-Your file should like the abbreviated example below after you have made the changes and saved the file. 
+Your file should look like the abbreviated example below after you have made the changes and saved the file. 
 
 ![Java Install 6](./assets/images/03-java-install-06.png)
 
