--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -195,7 +195,7 @@ In the AppDynamics model, a business transaction represents the data processing 
 - In a content portal, a user requests content such as sports, business or entertainment news
 - In a stock trading application, operations such as receiving a stock quote, buying or selling stocks
 
-Because AppDynamics orients performance monitoring around business transactions, you can focus on the performance of your application components from the user perspective. You can quickly identify whether a component is readily available or if it is having performance issues. For instance, you can check whether users able to log in, check out or view their data. You can see response times for users, and the causes of problems when they occur.
+Because AppDynamics orients performance monitoring around business transactions, you can focus on the performance of your application components from the user perspective. You can quickly identify whether a component is readily available or if it is having performance issues. For instance, you can check whether users are able to log in, check out or view their data. You can see response times for users, and the causes of problems when they occur.
 
 Verify that business transactions are being automatically detected by following the steps below.
 
@@ -208,7 +208,7 @@ You can read more about Business Transactions [here](https://docs.appdynamics.co
 
 <br>
 
-AppDynamics monitors every execution of a business transaction in the instrumented environment, and the metrics reflect all such executions. However, for troubleshooting purposes, AppDynamics takes snapshots of specific instances of a transaction. 
+AppDynamics monitors every execution of a business transaction in the instrumented environment, and the metrics reflect all such executions. However, for troubleshooting purposes, AppDynamics takes snapshots (containing deep diagnostic information) of specific instances of transactions that are having problems. 
 
 Verify that transaction snapshots are being automatically collected by following the steps below.
 
@@ -223,9 +223,9 @@ Verify that transaction snapshots are being automatically collected by following
 
 A transaction snapshot gives you a cross-tier view of the processing flow for a single invocation of a transaction.
 
-The Potential Issues panel highlights slow methods and slow remote service help you investigate the root causes for performance issues. 
+The "Potential Issues" panel highlights slow methods and slow remote service calls and help you investigate the root cause for performance issues. 
 
-Call drill downs, where available, detail key information including slowest methods, errors, and remote service calls for the transaction execution on a tier. A drill down may include a partial or complete call graph. Call graphs reflect the code-level view of the processing of the business transaction on a particular tier.
+Call drill downs, detail key information including slowest methods, errors, and remote service calls for the transaction execution on a tier. A drill down may include a partial or complete call graph. Call graphs reflect the code-level view of the processing of the business transaction on a particular tier.
 
 In the flow map for a business transaction snapshot, a tier with a Drill Down link indicates AppDynamics has taken a call graph for that tier.
 
@@ -242,8 +242,8 @@ The call graph view shows you the following details.
 
 
 1. The method execution sequence shows the names of the classes and methods that participated in processing the business transaction on this node, in the order in which the flow of control proceeded
-2. For each method, you can see the time and percentage spent processing and the line number in the source code, enabling you to pinpoint the location in code that could be affecting the performance of the transaction
-3. The call graph displays exit call links for methods that make calls to outside applications and services such as database queries and web service calls
+2. For each method, you can see the time and percentage spent processing and the line number in the source code, enabling you to pinpoint the location in the code that could be affecting the performance of the transaction
+3. The call graph displays exit call links for methods that make outbound calls to other components such as database queries and web service calls
 
 
 You can read more about Transaction Snapshots [here](https://docs.appdynamics.com/display/latest/Transaction+Snapshots)
