--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -24,7 +24,7 @@ Anytime you see the time frame selector visible in the AppDynamics UI, the view 
 
 Optimize the transaction detection by following the steps below.
 
-1. Click on the Configuration" option toward the bottom left menu
+1. Click on the "Configuration" option toward the bottom left menu
 2. Click on the "Instrumentation" link
 
 ![Config Settings 2](./assets/images/05-collection-conf-02.png)
