--- a/labs/appd-apm-java-101/6.md
+++ b/labs/appd-apm-java-101/6.md
@@ -50,7 +50,7 @@ Let's look at our business transactions and find the one that has the highest nu
 
 <br>
 
-Find the Business Transaction named "/Supercar-Trader/car.do" drill into the very slow transaction snapshots by performing the step below.
+Find the Business Transaction named "/Supercar-Trader/car.do" and drill into the very slow transaction snapshots by performing the step below.
 
 1. Click on the number of "Very Slow Transactions" for the "/Supercar-Trader/car.do" business transaction
 
@@ -79,7 +79,7 @@ The Potential Issues panel on the left highlights slow methods and slow remote s
 
 <br>
 
-The tab that opens shows the call graph of the Web-Portal Tier.  You can see most of the time spent was on an outbound HTTP call.
+The tab that opens shows the call graph of the Web-Portal Tier.  You can see that most of the time was due to an outbound HTTP call.
 
 2. Click on the "HTTP" link to open the detail panel for the downstream call
 
@@ -96,7 +96,7 @@ The detail panel for the downstream call shows that the Web-Portal Tier made an 
 
 <br>
 
-The next tab that opens shows the call graph of the Api-Services Tier.  You can see that 100% of the time spent was on an outbound HTTP call.
+The next tab that opens shows the call graph of the Api-Services Tier.  You can see that 100% of the time was due to an outbound HTTP call.
 
 4. Click on the "HTTP" link to open the detail panel for the downstream call
    
