--- a/labs/appd-apm-java-101/7.md
+++ b/labs/appd-apm-java-101/7.md
@@ -62,7 +62,7 @@ You can see indicators of Node issues in three areas on the Application Dashboar
 
 1. The Tier icon on the Flow Map changes color to indicate an issue with the Tier or one of its Nodes
 2. The Events panel shows Health Rule Violations, including those related to Node Health
-3. The Node Health panel tells you how many citical or warning issues are occurring for Nodes
+3. The Node Health panel tells you how many critical or warning issues are occurring for Nodes
 
 Click on the "Node Health" link in the Node Health panel to drill into the "Tiers & Nodes" dashboard.
 
