--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -59,7 +59,7 @@ You should now see the Tomcat Manager App page as seen in the image below.  Foll
 ```
 /Supercar-Trader
 ```
-2. Enter the value below in the "WAR or Directory path::" field
+2. Enter the value below in the "WAR or Directory path:" field
 ```
 file://home/centos/DevNet-Labs/applications/Supercar-Trader/Supercar-Trader.war
 ```
