--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -41,7 +41,7 @@ Optimize the transaction detection by following the steps below.
 <br>
 
 
-6. Select "Rule Configuration" tab on the Rule Editor
+6. Select the "Rule Configuration" tab on the Rule Editor
 7. Uncheck all the boxes on the  "Struts Action"
 8. Uncheck all the boxes on the  "Web Service"
 9. Scroll down to find the "Servlet" settings
