--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -40,7 +40,7 @@ If you are ready to learn how AppDynamics can help you monitor your application'
 
 <br>
 
-[Sandbox setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)
+[Lab setup](../appd-sandbox-setup-101/1.md) | 1, [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md) | [Back](../appd-sandbox-setup-101/1.md) | [Next](2.md)
 
 ```diff
 -TODO:  
