--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -6,7 +6,7 @@ In this Lab you learn how to use AppDynamics to monitor the health of your appli
 
 ## Prerequisites
 
-You should already have VPN access to your Sandbox environment for the lab.  If you have not requested a Sandbox environment for the lab, follow the instructions [here](../appd-sandbox-setup-101/1.md).  You should have basic experience with Java and Linux.
+You should already have access to the virtual machines for the lab.  If do not already have access to the VMs for the lab, follow the instructions [here](../appd-sandbox-setup-101/1.md).  You should have basic experience with Java and Linux.
 
 ## Lab Contents
 This lab covers six main areas:
@@ -18,9 +18,9 @@ This lab covers six main areas:
 5. Monitor and troubleshoot application issues : Part 1
 6. Monitor and troubleshoot application issues : Part 2
 
-## Sandbox Virtual Machines
+## Lab Virtual Machines
 
-The sandbox environment for the labs has two virtual machines.  The first virtual machine hosts the AppDynamics Controller and will be referred to from this point on as the "Controller VM".  
+The lab environment has two virtual machines.  The first virtual machine hosts the AppDynamics Controller and will be referred to from this point on as the "Controller VM".  
 
 The second virtual machine hosts the Supercar Trader application used in the labs.  It will be the host where you will install the AppDynamics agents and will be referred to from this point on as the "Application VM".
  
