--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -79,7 +79,7 @@ It may take up to 30 minutes for the new business transactions to replace the pr
 
 <br>
 
-[Lab setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), 5, [6](6.md), [7](7.md) | [Back](4.md) | [Next](6.md)    
+[Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), 5, [6](6.md), [7](7.md) | [Back](4.md) | [Next](6.md)    
 
 ```diff
 -TODO:  
