--- a/labs/appd-apm-java-101/6.md
+++ b/labs/appd-apm-java-101/6.md
@@ -130,7 +130,7 @@ You can read more about troubleshooting slow transactions [here](https://docs.ap
 <br>
 
 
-[Lab setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), 6, [7](7.md) | [Back](5.md) | [Next](7.md)    
+[Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), 6, [7](7.md) | [Back](5.md) | [Next](7.md)    
 
 ```diff
 -TODO:  
