--- a/labs/appd-apm-java-101/7.md
+++ b/labs/appd-apm-java-101/7.md
@@ -121,7 +121,7 @@ You can read more about Errors and Exceptions [here](https://docs.appdynamics.co
 
 <br>
 
-[Lab setup](../appd-sandbox-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), 7 | [Back](6.md) | Next    
+[Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), [5](5.md), [6](6.md), 7 | [Back](6.md) | Next    
 
 ```diff
 -TODO:  
