--- a/labs/appd-apm-java-101/2.md
+++ b/labs/appd-apm-java-101/2.md
@@ -78,3 +78,4 @@ Your browser should bring up a prompt for you to save the agent file to your loc
 -TODO:  
 Remove menu before moving to staging.
 ```
+@[:verbatim](1.md)
