--- a/labs/appd-apm-java-101/3.md
+++ b/labs/appd-apm-java-101/3.md
@@ -32,7 +32,7 @@ You will need to adjust parts of the example upload command seen below since:
 
 Run the command below from a new terminal window to upload the Java agent zip file to the "/tmp" directory of the "Application VM".  
 
-```
+```bash
 scp /tmp/AppServerAgent-20.3.0.29587.zip centos@application.vm.ip.address:/tmp/
 ```
 
@@ -193,6 +193,8 @@ There are over twenty properties with the "controller-info.xml" file. There are 
 
 <br>
 
+
+
 ![Java Install 4](./assets/images/03-java-install-04.png)
 
 Five of those properties have been pre-populated by the Controller when you downloaded the agent from there.  You must update the remaining three.
@@ -209,6 +211,7 @@ Update the three properties in the file with the values seen below.  Ensure that
 ```
 Your file should look like the abbreviated example below after you have made the changes and saved the file. 
 
+
 ![Java Install 5](./assets/images/03-java-install-05.png)
 
 <br>
@@ -219,19 +222,19 @@ Apache Tomcat is installed and running on your "Application VM". Perform the ste
 
 Use the command below to stop the running instance of Apache Tomcat.
 
-```
+```bash
 sudo systemctl stop apache-tomcat-7.service
 ```
 
 Find the "catalina.sh" startup file for Apache Tomcat.  The file is located in the directory seen below.
 
-```
+```bash
 cd /usr/local/apache/apache-tomcat-7/bin
 ```
 Update the "catalina.sh" file and add the export command seen below right after line 111 in the file. 
 If you are using WinSCP to update the file, ensure that the "Transfer Settings" are set to "Text".
 
-```
+```bash
 export CATALINA_OPTS="$CATALINA_OPTS -javaagent:/opt/appdynamics/javaagent/javaagent.jar"
 ```
 
@@ -242,12 +245,12 @@ Your file should look like the abbreviated example below after you have made the
 
 Restart Apache Tomcat using the command below.
 
-```
+```bash
 sudo systemctl start apache-tomcat-7.service
 ```
 Wait for two minutes and use the command below to ensure Apache Tomcat is running on port 8080.
 
-```
+```bash
 sudo netstat -tulpn | grep LISTEN
 ```
 You should see output like the image below showing that port 8080 is in use by Apache Tomcat.
