--- a/labs/appd-apm-java-101/2.md
+++ b/labs/appd-apm-java-101/2.md
@@ -2,13 +2,7 @@
 
 In this exercise you will access your AppDynamics Controller from your web browser and download the Java APM agent from there.  
 
-```diff
--TODO:  
-Add reference to VPN connection requirement.
-```
-
-
-In the example URL below, substitute the IP Address or fully qualified domain name of your Controller VM which you received in an email after reserving your sandbox environment for the labs. 
+In the example URL below, substitute the IP Address or fully qualified domain name of your Controller VM. 
 
 Example Controller URL for browser:
 
