--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -79,5 +79,7 @@ It may take up to 30 minutes for the new business transactions to replace the pr
 
 <br>
 
+[//]: # (This syntax works like a comment, and won't appear in any output.)
+
 [Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), 5, [6](6.md), [7](7.md) | [Back](4.md) | [Next](6.md)    
 
