--- a/labs/appd-apm-java-101/5.md
+++ b/labs/appd-apm-java-101/5.md
@@ -35,6 +35,7 @@ Optimize the transaction detection by following the steps below.
 4. Select the "Java Auto Discovery Rule"
 5. Click on the "Edit" button
 
+@[tkore:include:clone-git-repo-cmd]
 
 ![Config Settings 3](./assets/images/05-collection-conf-03.png)
 
@@ -83,5 +84,12 @@ It may take up to 30 minutes for the new business transactions to replace the pr
 
 <!-- This syntax works like a comment, and won't appear in any output. -->
 
+
+
+@[tkore:begin:bottom-nav-menu]
+
 [Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), [4](4.md), 5, [6](6.md), [7](7.md) | [Back](4.md) | [Next](6.md)    
+
+@[tkore:end:bottom-nav-menu]
+
 
