--- a/labs/appd-apm-java-101/1.md
+++ b/labs/appd-apm-java-101/1.md
@@ -26,17 +26,19 @@ The second virtual machine hosts the Supercar Trader application used in the lab
  
 <br>
 
-### Controller VM:
+## Controller VM:
 ![Controller VM Screenshot](./assets/images/01-controller-vm.png)
 
 <br>
 
-### Application VM:
+## Application VM:
 ![Application VM Screenshot](./assets/images/01-application-vm.png)
 
 <br>
 
-If you are ready to learn how AppDynamics can help you monitor your application's health, let's get started!
+If you are ready to learn how AppDynamics can help you monitor your application's health, let's get started!   
+
+Click [next](2.md) to go to the next exercise.
 
 <br>
 
