--- a/labs/appd-apm-java-101/3.md
+++ b/labs/appd-apm-java-101/3.md
@@ -6,10 +6,6 @@ In this exercise you will need to do the following:
 - Update the Java agents XML configuration file
 - Modify the Apache Tomcat startup script to add the Java agent
 
-```diff
--TODO:  
-Add reference to VPN connection requirement.
-```
 
 You will need the following connection details for the "Application VM" during this exercise.
 
@@ -258,6 +254,8 @@ You should see output like the image below showing that port 8080 is in use by A
 
 
 <br>
+
+Click [next](4.md) to go to the next exercise.
 
 [Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), 3, [4](4.md), [5](5.md), [6](6.md), [7](7.md) | [Back](2.md) | [Next](4.md)
 
