--- a/labs/appd-apm-java-101/4.md
+++ b/labs/appd-apm-java-101/4.md
@@ -17,11 +17,6 @@ cd /home/centos
 git clone https://github.com/Appdynamics/DevNet-Labs.git
 ```
 
-```diff
--TODO:  
-Change the GitHub URL above and the image below before moving to staging.
-```
-
 You should see output from the commands as seen below.
 
 ![Initialize App 1](./assets/images/04-initialize-app-01.png)
@@ -65,10 +60,6 @@ file://home/centos/DevNet-Labs/applications/Supercar-Trader/Supercar-Trader.war
 ```
 3. Click on the "Deploy" button
 
-```diff
--TODO:  
-Change the path to the WAR file above and the screenshot with the path shown below before moving to staging.
-```
 <br>
 
 ![Initialize App 3](./assets/images/04-initialize-app-03.png)
@@ -105,11 +96,6 @@ sudo chmod 754 /home/centos/DevNet-Labs/applications/Load-Generator/phantomjs/*.
 cd /home/centos/DevNet-Labs/applications/Load-Generator/phantomjs
 
 ./start_load.sh
-```
-
-```diff
--TODO:  
-Change the path to the load script directory above before moving to staging.
 ```
 
 
@@ -254,5 +240,7 @@ You can read more about Call Graphs [here](https://docs.appdynamics.com/display/
 
 
 <br>
+
+Click [next](5.md) to go to the next exercise.
 
 [Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), [2](2.md), [3](3.md), 4, [5](5.md), [6](6.md), [7](7.md) | [Back](3.md) | [Next](5.md)    
