--- a/labs/appd-apm-java-101/2.md
+++ b/labs/appd-apm-java-101/2.md
@@ -66,4 +66,6 @@ Your browser should bring up a prompt for you to save the agent file to your loc
 
 <br>
 
+Click [next](3.md) to go to the next exercise.
+
 [Lab setup](../appd-vm-setup-101/1.md) | [1](1.md), 2, [3](3.md), [4](4.md), [5](5.md), [6](6.md), [7](7.md) | [Back](1.md) | [Next](3.md)
